# Zgine

./: .gitignore  .gitmodules  3D_Config_20251024_141330.json  API_DOCUMENTATION.md  BUILD.md  BuildSpeedTest.bat  CMakeLists.txt  CMakePresets.json  CODE_STYLE.md  CONTRIBUTING.md  CleanProject.bat  DevBuild.bat  FastBuild.bat  GenerateProject.bat  IncrementalBuild.bat  LICENSE  PERFORMANCE_OPTIMIZATION.md  README.md  README_CN.md  Zgine.sln  audio_crash_final_solution.md  build-all.bat  build-editor-nuklear.bat  build-editor-tests.bat  build-editor.bat  build-nuklear.bat  build-runtime.bat  build-sandbox.bat  build-tests.bat  build.bat  build.ps1  build.sh  generate-solution.bat  glad_download.html  imgui.ini  migrate_includes.py  premake5.lua  run-editor-tests.bat  settings.json  tree_include.txt  (+1 more)
.cursor/rules/: bot-dev.mdc  workflow.mdc
Sandbox/: 2D_Config_20251027_203045.json  Sandbox.vcxproj  imgui.ini
Sandbox/assets/shaders/: Basic.glsl
Sandbox/scenes/: test_scene.json
Sandbox/src/: MainControlLayer.cpp  MainControlLayer.h  SandboxApp.cpp  Test2DLayer.cpp  Test2DLayer.h  Test3DLayer.cpp  Test3DLayer.h  sandbox_pch.cpp  sandbox_pch.h
Sandbox/src/Rendering/: RenderManager.cpp  RenderManager.h
Sandbox/src/Scene/: SceneManager.cpp  SceneManager.h
Sandbox/src/Settings/: SettingsManager.cpp  SettingsManager.h
Sandbox/src/Testing/: ECSTestLayer.cpp  ECSTestLayer.h  ResourceTestLayer.cpp  ResourceTestLayer.h  Test2DLayer.cpp  Test2DLayer.h  Test2DModule.cpp  Test2DModule.h  Test3DLayer.cpp  Test3DLayer.h  Test3DModule.cpp  Test3DModule.h
Sandbox/src/UI/: UIManager.cpp  UIManager.h
Zgine/: Zgine.vcxproj  Zgine.vcxproj.filters
Zgine/src/: Zgine.h  zgpch.cpp  zgpch.h
Zgine/src/Zgine/: Application.cpp  Application.h  Core.h  EntryPoint.h  Input.h  KeyCodes.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  MouseButtonCodes.h  Timestep.h  Window.h
assets/icons/app/: ZgineSandbox.icns
assets/scenes/: test_scene.json
assets/shaders/: Basic.vert  Depth.vert  Model.frag  Model.vert  PBR.frag  PBR.vert  Simple.frag  Simple.vert
assets/shaders/postprocess/: BrightPass.frag  Composite.frag  GaussianBlur.frag
cmake/: CompilerOptions.cmake  CopyAssetsIfMissing.cmake  Dependencies.cmake  FixThirdPartyIncludes.cmake  InstallExample.cmake  ZgineConfig.cmake.in  ZgineSandbox.desktop  deps_versions.cmake
docs/: Architecture.md  BUILD_SCRIPTS.md  CMake_Fixes.md  CodeArchitecture.md  INDUSTRIAL_GRADE_UPGRADE.md  INSTALL.md  IncludeAndSrcStructure.txt  Lua_Scripting_Integration.md  Phase10_PBR_Rendering.md  Phase2_Graphics_Basic.md  Phase3_ECS_3D.md  Phase4_Resources_Entities.md  Phase5_Physics_System.md  Phase6_Editor_System.md  Phase7_Audio_System.md  Phase9_Lua_Scripting.md  ProjectStructure.txt  README.md  RoadMap.md  app-ui-style.md  architecture-roadmap.md  constitution.md  editor.md  engine-architecture.md  engine-vision.md  project-standards.md  rendering-backends.md  vendor.md
docs/algorithms/: batch-rendering.md  circle-rendering.md
docs/api/: renderer.md
docs/architecture/: ai-readable-engine-design.md  ecs-rules.md  file-organization.md  module-boundaries.md  overview.md  renderer-rules.md  runtime-editor-separation.md  uml-class-diagrams.md
docs/architecture/uml/: uml-class-diagrams.md
docs/changes/: README.md
docs/changes/_template/: acceptance.md  design.md  proposal.md  requirements.md  tasks.md
docs/changes/add-asset-database/: acceptance.md  design.md  proposal.md  requirements.md  tasks.md
docs/changes/add-editor-asset-browser/: acceptance.md  design.md  proposal.md  requirements.md  tasks.md
docs/changes/add-editor-asset-selection-inspector/: acceptance.md  design.md  proposal.md  requirements.md  tasks.md
docs/changes/add-editor-inspector-workflow/: acceptance.md  design.md  proposal.md  requirements.md  tasks.md
docs/changes/add-play-mode/: acceptance.md  design.md  proposal.md  requirements.md  tasks.md
docs/changes/add-prefab-system/: acceptance.md  design.md  proposal.md  requirements.md  tasks.md
docs/changes/define-runtime-editor-boundary/: acceptance.md  design.md  proposal.md  requirements.md  tasks.md
docs/ecs/: entt-integration.md
docs/examples/: SceneViewModel_Usage.cpp
docs/guides/: build-optimization.md  getting-started.md
docs/improvements/: ecs-optimization-2024-10-27.md  opengl-optimization-plan.md  opengl-optimization-summary.md  smartpointers-improvements-summary.md  smartpointers-review.md
docs/specs/: Asset.md  Audio.md  Core.md  ECS.md  Editor.md  Physics.md  Renderer.md  Scene.md  Scripting.md  Serialization.md
editor/: CMakeLists.txt  main.cpp
include/Zgine/: Zgine.h
include/Zgine/Audio/: AudioSystem.h
include/Zgine/Gui/: GuiAPI.h  GuiLayer.h
include/Zgine/Physics/: PhysicsSystem.h
include/Zgine/Platform/: Input.h  VulkanSurface.h  Window.h
include/Zgine/Runtime/: SceneRuntime.h
include/Zgine/Scripting/: IScript.h  ScriptEngine.h  ScriptSystem.h
sandbox/: CMakeLists.txt  ZgineSandbox.rc  main.cpp
scripts/: README.md  analyze_file_types.pl  count_files.pl  count_lines.pl  project_overview.pl  project_overview_old.pl  project_overview_simple.pl  rm-deps-build.bat  rm-deps-build.py  run_stats.pl
src/Audio/: AudioSystem.cpp
src/Core/Application/: Application.cpp  LayerStack.cpp
src/Core/Events/: Event.cpp
src/Core/Input/: Input.cpp
src/Core/Jobs/: JobSystem.cpp
src/Core/Layers/: LayerStack.cpp
src/Core/Log/: Log.cpp  ScopeTimer.cpp
src/Physics/: PhysicsSystem.cpp
src/Platform/: Input.cpp  VulkanSurface.cpp
src/Runtime/: SceneRuntime.cpp
src/Scripting/: ScriptEngine.cpp  ScriptSystem.cpp
tests/: AssetDatabaseTests.cpp  AssetManagerTests.cpp  CMakeLists.txt  DocumentationStructureTests.cpp  EngineSmokeTests.cpp  InputTests.cpp  PrefabTests.cpp  RendererBackendTests.cpp  SceneRuntimeTests.cpp  ScriptSystemTests.cpp  SystemManagerTests.cpp  test_scene_destroy.cpp
tests/Editor/: AssetSelectionContextTests.cpp  CMakeLists.txt  EditorCommandTests.cpp  EditorContextTests.cpp  EditorEventBusTests.cpp  SelectionContextTests.cpp
(+473 files in other folders)
